# files-rs

./: .env  .env-example  .gitignore  Cargo.toml  README.md  config-example.toml
db/: db.sqlite3
migrations/2024-06-17-055643_create_buckets/: down.sql  up.sql
migrations/2024-06-17-062101_directories/: down.sql  up.sql
migrations/2024-06-20-033137_bucket_name_unique_client/: down.sql  up.sql
migrations/2024-06-22-052953_dir_name_unique_bucket/: down.sql  up.sql
migrations/2024-06-25-041835_bucket_label_index/: down.sql  up.sql
migrations/2024-06-25-041840_dir_label_index/: down.sql  up.sql
migrations/2024-06-28-025058_create_clients/: down.sql  up.sql
migrations/2024-06-29-055643_create_buckets/: down.sql  up.sql
migrations/2024-06-29-062101_create_dirs/: down.sql  up.sql
migrations/2024-06-30-030842_create_users/: down.sql  up.sql
migrations/2024-07-09-003516_create_files/: down.sql  up.sql
migrations/2024-07-12-024412_bucket_img_only/: down.sql  up.sql
migrations/2024-07-17-094007_dirs_updated_at_index/: down.sql  up.sql
migrations/2024-07-22-015433_files_img_taken_at/: down.sql  up.sql
migrations/2024-08-03-125437_clients_default_bucket/: down.sql  up.sql
src/: config.rs  error.rs  main.rs  run.rs  schema.rs  uuid.rs
src/auth/: admin.rs  mod.rs  models.rs  password.rs  queries.rs  token.rs
src/auth/models/: client.rs
src/buckets/: commands.rs  models.rs  queries.rs
src/clients/: commands.rs  models.rs  queries.rs
src/db/: conn.rs  connection.rs
src/dirs/: mod.rs  models.rs  queries.rs
src/files/: mod.rs  models.rs  queries.rs
src/files/buckets/: models.rs  queries.rs
src/files/dirs/: models.rs  queries.rs
src/files/models/: bucket.rs  dir.rs  directory.rs  file.rs  mod.rs  validators.rs
src/files/queries/: buckets.rs  directories.rs  dirs.rs  mod.rs
src/health/: check.rs  mod.rs  models.rs
src/roles/: models.rs
src/storage/: client.rs
src/users/: commands.rs  mod.rs  models.rs  queries.rs
src/util/: base64.rs  filename.rs  id.rs  mod.rs  slug.rs  username.rs
src/validators/: csvname.rs  error.rs  mod.rs  sluggable.rs
src/web/: auth.rs  error.rs  health.rs  home.rs  mod.rs  not_found.rs  pagination.rs  params.rs  response.rs  routes.rs  server.rs
src/web/buckets/: handlers.rs  routes.rs
src/web/dirs/: handlers.rs  routes.rs
src/web/files/: handlers.rs  mod.rs  routes.rs
src/web/middlewares/: auth.rs  bucket.rs  buckets.rs  dir.rs  directories.rs  directory.rs  file.rs  mod.rs
