[package]
name = "files-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bigdecimal = "0.4.4"
clap = { version = "4.5.7", features = ["derive"] }
derive_more = { version = "0.99.18", features = ["from"] }
jwt-simple = { version = "0.12.9", default-features = false, features = ["pure-rust"] }
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.14"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[profile.dev]
debug = 0
