[package]
name = "files-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.7.5", features = ["macros"] }
base64 = "0.22.1"
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["derive"] }
deadpool-diesel = { version = "0.6.1", features = ["sqlite"] }
derive_more = { version = "0.99.18", features = ["from"] }
diesel = { version = "2.2.1", features = ["sqlite"] }
dotenvy = "0.15.7"
google-cloud-storage = "0.18.0"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
rpassword = "7.3.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["limit", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.8.0", features = ["v4", "v7", "fast-rng", "std"] }
validator = { version = "0.18.1", features = ["derive"] }

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
