[package]
name = "files-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.8.1", features = ["macros", "multipart"] }
chrono = "0.4.40"
clap = { version = "4.5.31", features = ["derive"] }
deadpool-diesel = { version = "0.6.1", features = ["sqlite"] }
derive_more = { version = "2.0.1", features = ["full"] }
diesel = { version = "2.2.8", features = ["sqlite"] }
google-cloud-storage = "0.24.0"
image = "0.25.5"
infer = "0.19.0"
jsonwebtoken = "9.3.1"
kamadak-exif = "0.6.1"
multer = "3.1.0"
rpassword = "7.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["full"] }
toml = "0.8.20"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["limit", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.15.1", features = ["v7"] }
validator = { version = "0.20.0", features = ["derive"] }
